# agentic-cba-indicators

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_QUALITY.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev.ps1  main.py  pyproject.toml  test_indicator_tools.py  test_tools.py
.github/: copilot-instructions.md
cba_inputs/: CBA ME Indicators List.xlsx  branding.md  cba_me_rag_context.md  file_structure_and_ingestion_notes_chad_indicator_selection_example.md  prompt_original.txt
cba_inputs/example/: Indicators_for_Use_Case_Regenerative_Cotton_in_Chad.xlsx
config/: __init__.py  provider_factory.py  providers.yaml
config/examples/: anthropic.yaml  bedrock.yaml  gemini.yaml  ollama.yaml
docs/: known-limitations.md  tools-reference.md
docs/adr/: ADR-001-synchronous-embedding-design.md  ADR-002-observability-strategy.md  ADR-003-memory-architecture.md  ADR-004-conversation-caching-deferral.md  ADR-005-self-correction-deferral.md  ADR-006-deferred-features-summary.md  README.md
docs/dev/: plan-citation-normalization-strategy.md  plan-externalDataSourceIntegration.md  plan-gfw-forestry-tools.md  plan-internalToolDocsGuideline.md  plan-mcpserver.md  plan-streamlit-implementation.md  plan-streamlit.md  plan-unpaywall-crossref-enrichment.md
docs/dev/code-reviews/: 2026-01-19-combined-review.md  2026-01-19-gpt52-codex-review.md  2026-01-19-opus-review.md  2026-01-20-opus-review.md  agentic_ai_code_review_report-2026-01-18-v2.md  code-review-findings-2026-01-18-v1.md  code-review-findings.md
docs/dev/plan_phase1a/: code-review-findings-2026-01-17-v1.md  code-review-findings-2026-01-18-v2.md
docs/development/code-reviews/: agentic_ai_code_review_report-2026-01-18-v1 copy.md  agentic_ai_code_review_report-2026-01-18-v1.md  agentic_ai_code_review_report-2026-01-20-v1.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/tasks/: TASK001-fix-config-lookup-and-schema-validation.md  TASK002-standardize-http-handling.md  TASK003-embedding-failure-handling.md  TASK004-bounded-geocode-cache-and-centralize-geocoding.md  TASK005-centralize-code-maps.md  TASK006-expand-test-coverage.md  TASK007-move-pyright-to-dev.md  TASK008-sanitize-error-messages.md  TASK009-enforce-tls-ollama.md  TASK010-bound-geocode-cache.md  TASK011-coordinate-validation.md  TASK012-env-var-whitelist.md  TASK013-path-traversal-prevention.md  TASK014-http-context-managers.md  TASK015-rate-limiting.md  TASK016-json-decode-error.md  TASK017-embedding-failure-handling.md  TASK018-chromadb-retry-logic.md  TASK018-chromadb-retry.md  TASK019-consolidate-country-mappings.md  TASK020-consolidate-weather-codes.md  TASK021-citation-normalization-strategy.md  TASK021-consolidate-embedding.md  TASK022-configurable-timeouts.md  TASK023-magic-numbers.md  TASK024-cli-framework.md  TASK025-logging-framework.md  TASK026-cli-type-hints.md  TASK027-script-type-hints.md  TASK028-kb-type-hints.md  TASK029-remove-unused-imports.md  TASK030-standardize-docstrings.md  TASK031-fix-typos.md  TASK032-update-urls.md  TASK033-improve-comments.md  TASK034-organize-imports.md  TASK035-increase-test-coverage.md  TASK036-integration-tests.md  TASK037-clean-test-files.md  TASK038-create-help-tools-module.md  (+116 more)
prompts/: system_prompt.md  system_prompt_minimal.md
scripts/: README.md  get_gfw_api_key.py  ingest_excel.py  ingest_usecases.py
src/agentic_cba_indicators/: __init__.py  audit.py  cli.py  logging_config.py  mcp_server.py  memory.py  observability.py  paths.py  security.py  ui.py
src/agentic_cba_indicators/config/: __init__.py  _secrets.py  provider_factory.py  providers.yaml
src/agentic_cba_indicators/config/examples/: bedrock.yaml  gemini.yaml  ollama.yaml  openai.yaml
src/agentic_cba_indicators/prompts/: __init__.py  system_prompt.md  system_prompt_guided.md  system_prompt_minimal.md
src/agentic_cba_indicators/tools/: __init__.py  _crossref.py  _embedding.py  _geo.py  _help.py  _http.py  _mappings.py  _parallel.py  _timeout.py  _unpaywall.py  agriculture.py  biodiversity.py  climate.py  commodities.py  forestry.py  gender.py  knowledge_base.py  labor.py  nasa_power.py  sdg.py  socioeconomic.py  soilgrids.py  weather.py
tests/: conftest.py  test_audit.py  test_chromadb_singleton.py  test_citation_normalization.py  test_cli_logging.py  test_config.py  test_embedding_batch_json.py  test_http.py  test_ingest_excel.py  test_ingest_usecases.py  test_integration.py  test_kb_cache.py  test_knowledge_versioning.py  test_logging_json.py  test_mcp_server.py  test_memory.py  test_observability.py  test_parallel_tools.py  test_paths.py  test_provider_factory_gemini.py  test_secrets.py  test_security.py  test_tool_wrapping.py  test_tools_climate.py  test_tools_forestry.py  test_tools_geo.py  test_tools_help.py  test_tools_socioeconomic.py  test_tools_timeout.py  test_tools_weather.py  test_ui_prompt.py  test_unpaywall.py
tools/: __init__.py  _geo.py  _http.py  agriculture.py  biodiversity.py  climate.py  commodities.py  gender.py  knowledge_base.py  labor.py  nasa_power.py  sdg.py  socioeconomic.py  soilgrids.py  weather.py
