[project]
name = "strands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "httpx>=0.28.1",
    "mcp>=1.25.0",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "ruff>=0.14.13",
    "strands-agents-tools>=0.2.19",
    "strands-agents[ollama]>=1.22.0",
]
